--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -10,7 +10,7 @@ USE="${CPU_FLAGS_X86} -ipv6
 CHOST="x86_64-pc-linux-gnu"
 CFLAGS="-march=native -O2 -fomit-frame-pointer -pipe"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j5"
+MAKEOPTS="-j2"
 # ACCEPT_KEYWORDS="~amd64"
 RUBY_TARGETS="ruby21"
 PYTHON_TARGETS="python2_7 python3_4"
@@ -33,4 +33,8 @@ DISTDIR="/home/distfiles"
 PKGDIR="/home/packages"
 PORTAGE_TMPDIR="/tmp"
 PORTAGE_NICENESS=15
+
+FEATURES="$FEATURES ccache"
+CCACHE_SIZE="8G"
+CCACHE_DIR="/home/ccache"
 #EOF
