--- a/etc/portage/package.env
+++ b/etc/portage/package.env
@@ -6,3 +6,6 @@ sys-devel/gcc notmpfs.conf
 sys-devel/llvm clang.conf
 kde-apps/* clang.conf
 dev-lang/ghc notmpfs.conf
+
+media-video/ffmpeg ccache.conf
+net-misc/curl ccache.conf
