--- a/etc/psd.conf
+++ b/etc/psd.conf
@@ -54,10 +54,11 @@ BROWSERS="google-chrome"
 #   Arch Linux/Chakra, Fedora, and Gentoo leave this commented out
 #   Debian 6 and below use a setting of "/dev/shm"
 #   Debian 7+  use a setting of "/run/shm"
-VOLATILE="/tmp"
+#VOLATILE="/tmp"
+VOLATILE="/tmp/profile-sync-daemon"
 
 # Define where the pid file for psd will reside
 #   Arch Linux/Chakra, Debian 7+, Fedora, and Gentoo leave this commented out
 #   Debian 6 and below/Mint/Ubuntu use a setting of "/var/run/psd"
 #
-DAEMON_FILE="/run/psd"
+#DAEMON_FILE="/run/psd"
