--- a/home/e788b1/.config/Trolltech.conf
+++ b/home/e788b1/.config/Trolltech.conf
@@ -37,7 +37,7 @@ customColors\8=4294967295
 customColors\9=4294967295
 doubleClickInterval=400
 embedFonts=true
-filedialog="@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0X\0\0\xe\0\x1\0\0\0\a\x1\0\0\0\x1\0\0\0\x6\0\0\0\x5\x66ile:\0\0\0\x13\x66ile:///home/e788b1\0\0\0\x1a\x66ile:///home/e788b1/Videos\0\0\0\x1d\x66ile:///home/e788b1/Downloads\0\0\0\vfile:///tmp\0\0\0\x18\x66ile:///run/media/e788b1\0\0\0\x6\0\0\0,\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0\x44\0o\0\x63\0u\0m\0\x65\0n\0t\0s\0\0\0`\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0\x44\0o\0\x63\0u\0m\0\x65\0n\0t\0s\0/\0\x62\0o\0o\0t\0\x64\0i\0s\0k\0.\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0\x62\0o\0o\0t\0/\0I\0M\0G\0S\0\0\0\x34\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0\x44\0o\0\x63\0u\0m\0\x65\0n\0t\0s\0/\0I\0S\0O\0\0\0H\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0\x44\0o\0\x63\0u\0m\0\x65\0n\0t\0s\0/\0\x63\0o\0o\0k\0i\0\x65\0s\0/\0\x63\0\x63\0\x63\0\x63\0\x63\0\0\0$\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0M\0u\0s\0i\0\x63\0\0\0\x18\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0\0\0\x18\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x36\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1`\0\0\0\x1\0\0\0\0\0\0\0\x37\0\0\0\x1\0\0\0\0\0\0\0;\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0)"
+filedialog="@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0X\0\0\xe\0\x1\0\0\0\a\x1\0\0\0\x1\0\0\0\x6\0\0\0\x5\x66ile:\0\0\0\x13\x66ile:///home/e788b1\0\0\0\x1a\x66ile:///home/e788b1/Videos\0\0\0\x1d\x66ile:///home/e788b1/Downloads\0\0\0\vfile:///tmp\0\0\0\x18\x66ile:///run/media/e788b1\0\0\0\x6\0\0\0$\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0M\0u\0s\0i\0\x63\0\0\0\x18\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0\0\0<\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0\x44\0o\0w\0n\0l\0o\0\x61\0\x64\0s\0/~\xc8p\xb9T'\x8d\x44n\x90v\xee_U\0\0\0@\0/\0r\0u\0n\0/\0m\0\x65\0\x64\0i\0\x61\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0W\0\x44\0\x33\0T\0/\0\x44\0o\0w\0n\0l\0o\0\x61\0\x64\0s\0\0\0H\0/\0h\0o\0m\0\x65\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0/\0.\0V\0i\0r\0t\0u\0\x61\0l\0\x42\0o\0x\0/\0M\0\x61\0\x63\0h\0i\0n\0\x65\0s\0/\0x\0p\0\0\0\"\0/\0r\0u\0n\0/\0m\0\x65\0\x64\0i\0\x61\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0\0\0\"\0/\0r\0u\0n\0/\0m\0\x65\0\x64\0i\0\x61\0/\0\x65\0\x37\0\x38\0\x38\0\x62\0\x31\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x45\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1`\0\0\0\x1\0\0\0\0\0\0\0\x46\0\0\0\x1\0\0\0\0\0\0\0;\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0)"
 font="Sans Serif,12,-1,5,50,0,0,0,0,0"
 fontPath=@Invalid()
 globalStrut\height=0
@@ -72,14 +72,14 @@ com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\kde4\plugins\image
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\kde4\plugins\imageformats\kimg_webp.so=2016-05-29T12:28:15, webp
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\kde4\plugins\imageformats\kimg_xcf.so=2016-05-30T19:39:39, xcf, XCF
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\kde4\plugins\imageformats\kimg_xview.so=2016-05-30T19:39:39, xv
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqgif.so=2016-05-30T10:43:48, gif
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqico.so=2016-05-30T10:43:48, ico
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqjpeg.so=2016-05-30T10:43:48, jpeg, jpg
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqmng.so=2016-05-30T10:43:48, mng
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqgif.so=2016-07-04T21:00:03, gif
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqico.so=2016-07-04T21:00:03, ico
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqjpeg.so=2016-07-04T21:00:03, jpeg, jpg
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqmng.so=2016-07-04T21:00:03, mng
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqsvg.so=2016-03-17T14:08:11, svg, svgz
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqtga.so=2016-05-30T10:43:48, tga
-com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqtiff.so=2016-05-30T10:43:48, tiff, tif
-com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib64\qt4\plugins\inputmethods\libqimsw-multi.so=2016-05-30T10:43:48, imsw-multi
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqtga.so=2016-07-04T21:00:03, tga
+com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib64\qt4\plugins\imageformats\libqtiff.so=2016-07-04T21:00:03, tiff, tif
+com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib64\qt4\plugins\inputmethods\libqimsw-multi.so=2016-07-04T21:00:03, imsw-multi
 com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib64\qt4\plugins\inputmethods\qtim-fcitx.so=2016-05-30T11:56:54, fcitx
 com.trolltech.Qt.QSqlDriverFactoryInterface%3A\usr\lib64\qt4\plugins\sqldrivers\libqsqlite.so=2015-11-13T19:45:04, QSQLITE
 com.trolltech.Qt.QSqlDriverFactoryInterface%3A\usr\lib64\qt4\plugins\sqldrivers\libqsqlmysql.so=2015-11-13T19:45:04, QMYSQL3, QMYSQL
@@ -349,14 +349,14 @@ usr\lib64\qt4\plugins\codecs\libqjpcodecs.so=40806, 0, x86_64 linux g++-4 full-c
 usr\lib64\qt4\plugins\codecs\libqkrcodecs.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-13T15:12:15
 usr\lib64\qt4\plugins\codecs\libqtwcodecs.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-13T15:12:15
 usr\lib64\qt4\plugins\iconengines\libqsvgicon.so=40806, 0, x86_64 linux g++-4 full-config, 2016-03-17T14:08:11
-usr\lib64\qt4\plugins\imageformats\libqgif.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
-usr\lib64\qt4\plugins\imageformats\libqico.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
-usr\lib64\qt4\plugins\imageformats\libqjpeg.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
-usr\lib64\qt4\plugins\imageformats\libqmng.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
+usr\lib64\qt4\plugins\imageformats\libqgif.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
+usr\lib64\qt4\plugins\imageformats\libqico.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
+usr\lib64\qt4\plugins\imageformats\libqjpeg.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
+usr\lib64\qt4\plugins\imageformats\libqmng.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
 usr\lib64\qt4\plugins\imageformats\libqsvg.so=40806, 0, x86_64 linux g++-4 full-config, 2016-03-17T14:08:11
-usr\lib64\qt4\plugins\imageformats\libqtga.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
-usr\lib64\qt4\plugins\imageformats\libqtiff.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
-usr\lib64\qt4\plugins\inputmethods\libqimsw-multi.so=40806, 0, x86_64 linux g++-4 full-config, 2016-05-30T10:43:48
+usr\lib64\qt4\plugins\imageformats\libqtga.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
+usr\lib64\qt4\plugins\imageformats\libqtiff.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
+usr\lib64\qt4\plugins\inputmethods\libqimsw-multi.so=40806, 0, x86_64 linux g++-4 full-config, 2016-07-04T21:00:03
 usr\lib64\qt4\plugins\inputmethods\qtim-fcitx.so=40806, 1, x86_64 linux g++-4 full-config, 2016-05-30T11:56:54
 usr\lib64\qt4\plugins\phonon_backend\phonon_vlc.so=40806, 1, x86_64 linux g++-4 full-config, 2015-05-29T01:24:59
 usr\lib64\qt4\plugins\sqldrivers\libqsqlite.so=40806, 0, x86_64 linux g++-4 full-config, 2015-11-13T19:45:04
