--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -10,48 +10,48 @@
     </match>
 
 <!-- Synthetic emboldening for fonts that do not have bold face available -->
-    <match target="font">
-        <test name="weight" compare="less_eq"> <const>medium</const> </test>
-        <test target="pattern" name="weight" compare="more">
-            <const>medium</const>
-        </test>
-            <edit name="embolden" mode="assign"> <bool>true</bool> </edit>
-            <edit name="weight" mode="assign"> <const>bold</const> </edit>
-    </match>
+    <!-- <match target="font"> -->
+        <!-- <test name="weight" compare="less_eq"> <const>medium</const> </test> -->
+        <!-- <test target="pattern" name="weight" compare="more"> -->
+            <!-- <const>medium</const> -->
+        <!-- </test> -->
+            <!-- <edit name="embolden" mode="assign"> <bool>true</bool> </edit> -->
+            <!-- <edit name="weight" mode="assign"> <const>bold</const> </edit> -->
+    <!-- </match> -->
 
 
 <!-- ===================== en ===================== -->
-    <match target="font">
-        <test name="family">
-            <!-- <string>Andale Mono</string> -->
-            <string>Arial</string>
-            <string>Comic Sans MS</string>
-            <string>Georgia</string>
-            <string>Impact</string>
-            <string>Trebuchet MS</string>
-            <string>Verdana</string>
-            <!-- <string>Courier New</string> -->
-            <string>Times New Roman</string>
-            <string>Tahoma</string>
-            <string>Webdings</string>
-            <string>Albany AMT</string>
-            <string>Thorndale AMT</string>
-            <string>Cumberland AMT</string>
-            <string>Andale Sans</string>
-            <string>Andy MT</string>
-            <string>Bell MT</string>
-            <string>Monotype Sorts</string>
-        </test>
-    <test name="pixelsize" compare="less_eq">
-            <double>14</double>
-    </test>
-            <edit name="autohint">
-                    <bool>false</bool>
-            </edit>
-            <edit name="antialias">
-                    <bool>false</bool>
-            </edit>
-    </match>
+    <!-- <match target="font"> -->
+        <!-- <test name="family"> -->
+            <!-- [> <string>Andale Mono</string> <] -->
+            <!-- <string>Arial</string> -->
+            <!-- <string>Comic Sans MS</string> -->
+            <!-- <string>Georgia</string> -->
+            <!-- <string>Impact</string> -->
+            <!-- <string>Trebuchet MS</string> -->
+            <!-- <string>Verdana</string> -->
+            <!-- [> <string>Courier New</string> <] -->
+            <!-- <string>Times New Roman</string> -->
+            <!-- <string>Tahoma</string> -->
+            <!-- <string>Webdings</string> -->
+            <!-- <string>Albany AMT</string> -->
+            <!-- <string>Thorndale AMT</string> -->
+            <!-- <string>Cumberland AMT</string> -->
+            <!-- <string>Andale Sans</string> -->
+            <!-- <string>Andy MT</string> -->
+            <!-- <string>Bell MT</string> -->
+            <!-- <string>Monotype Sorts</string> -->
+        <!-- </test> -->
+    <!-- <test name="pixelsize" compare="less_eq"> -->
+            <!-- <double>14</double> -->
+    <!-- </test> -->
+            <!-- <edit name="autohint"> -->
+                    <!-- <bool>false</bool> -->
+            <!-- </edit> -->
+            <!-- <edit name="antialias"> -->
+                    <!-- <bool>false</bool> -->
+            <!-- </edit> -->
+    <!-- </match> -->
 
     <!-- ===================== Arial ===================== -->
     <match target="pattern">
@@ -59,10 +59,10 @@
             <string>Arial</string>
         </test>
         <edit name="family" mode="assign" binding="same">
-            <string>Cronos Pro</string>
-            <string>Verdana</string>
-            <string>Ubuntu</string>
-            <string>Trebuchet MS</string>
+            <string>cronos pro</string>
+            <string>verdana</string>
+            <string>ubuntu</string>
+            <string>trebuchet ms</string>
         </edit>
     </match>
 
@@ -81,24 +81,24 @@
     </match>
 
 <!-- ===================== zh ===================== -->
-    <match target="font">
-        <test target="pattern" name="lang" compare="contains">
-            <string>zh</string>
-        </test>
-        <edit name="spacing">
-            <const>proportional</const>
-        </edit>
-        <edit name="globaladvance">
-            <bool>false</bool>
-        </edit>
-    </match>
+    <!-- <match target="font"> -->
+        <!-- <test target="pattern" name="lang" compare="contains"> -->
+            <!-- <string>zh</string> -->
+        <!-- </test> -->
+        <!-- <edit name="spacing"> -->
+            <!-- <const>proportional</const> -->
+        <!-- </edit> -->
+        <!-- <edit name="globaladvance"> -->
+            <!-- <bool>false</bool> -->
+        <!-- </edit> -->
+    <!-- </match> -->
 
-   <match target="font">
-        <test name="family"> <string>Microsoft YaHei</string> </test>
-            <edit name="autohint">  <bool>false</bool>      </edit>
-            <edit name="hinting">   <bool>true</bool>       </edit>
-            <edit name="hintstyle"> <const>hintfull</const> </edit>
-    </match>
+   <!-- <match target="font"> -->
+        <!-- <test name="family"> <string>Microsoft YaHei</string> </test> -->
+            <!-- <edit name="autohint">  <bool>false</bool>      </edit> -->
+            <!-- <edit name="hinting">   <bool>true</bool>       </edit> -->
+            <!-- <edit name="hintstyle"> <const>hintfull</const> </edit> -->
+    <!-- </match> -->
 
 <!-- ===================== Terminus ===================== -->
     <match target="font">
@@ -121,7 +121,7 @@
         <prefer>
             <family>Cronos Pro</family>
             <!-- <family>Tensentype ZhiQianLiShuF</family> -->
-            <family>SBT-TsukuARdGothic Std M</family>
+            <family>Droid Sans</family>
             <family>STKaiti</family>
             <family>FZJunHeiS-DB-GB</family>
             <family>FZZhengHei-DB-GBK</family>
@@ -140,13 +140,13 @@
         <prefer>
             <!-- <family>Terminus</family> -->
             <family>Cronos Pro</family>
-            <family>Ubuntu</family>
-            <!-- <family>WenQuanYi Bitmap Song</family> -->
-            <family>SBT-TsukuARdGothic Std M</family>
-            <family>Microsoft YaHei</family>
-            <family>Simsun</family>
-            <family>Fixed</family>
-            <family>Symbola</family>
+            <family>Droid Sans</family>
+            <family>FZZhunYuan-M02</family>
+            <!-- <family>Ubuntu</family> -->
+            <!-- <family>Microsoft YaHei</family> -->
+            <!-- <family>Simsun</family> -->
+            <!-- <family>Fixed</family> -->
+            <!-- <family>Symbola</family> -->
         </prefer>
     </alias>
     <alias>
@@ -154,6 +154,7 @@
         <prefer>
             <!-- <family>Terminus</family> -->
             <family>Courier New</family>
+            <family>SBT-TsukuARdGothic Std M</family>
             <family>WenQuanYi Bitmap Song</family>
             <family>Fixed</family>
             <family>Symbola</family>
