--- a/home/e788b1/.i3/py3status.conf
+++ b/home/e788b1/.i3/py3status.conf
@@ -55,7 +55,8 @@ dpms {
 
 net_rate {
     interfaces = wlp8s0b1
-    format = "{total}"
+    # format = "{total}"
+    format = "{up}↑ {down}↓"
     on_click 1 = "exec --no-startup-id urxvtc_scratchpad -e i3get"
     on_click 3 = "exec --no-startup-id google-chrome-stable"
 }
