--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -28,7 +28,10 @@
     valid users = e788b1
 [public]
     comment = My Public Share
+    browseable = yes
+    public = yes
+    create mode = 0766
+    guest ok = yes
     path = /home/e788b1/Public
     read only = no
-    guest ok = yes
 ;
