--- a/home/e788b1/.config/mpv/mpv.conf
+++ b/home/e788b1/.config/mpv/mpv.conf
@@ -29,7 +29,7 @@ ass-force-style=Kerning=yes
 
 # Audio
 ao=pulse,alsa
-af=drc
+# af=drc
 # af-defaults=volume=replaygain-track:replaygain-clip=yes:detach
 # af-add=rubberband,volume
 
