--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -129,6 +129,7 @@
 # or if you want it to read another file, as well as /etc/hosts, use
 # this.
 #addn-hosts=/etc/banner_add_hosts
+addn-hosts=/etc/hosts.gfw
 
 # Set this (and domain: see below) if you want to have a domain
 # automatically added to simple names in a hosts-file.
