--- a/etc/X11/xorg.conf
+++ b/etc/X11/xorg.conf
@@ -3,15 +3,15 @@ Section "Monitor"
     Identifier  "LVDS"
     Option      "Primary" "true"
     Option      "PreferredMode" "1366x768"
-    Option      "Position" "0 132"
-    Option      "DPI" "108 x 108"
+    # Option      "Position" "0 132"
+    # Option      "DPI" "144 x 144"
 EndSection
 
 Section "Monitor"
     Identifier  "HDMI-0"
-    Option      "Above" "LVDS"
+    Option      "RightOf" "LVDS"
     Option      "PreferredMode" "1920x1080"
-    Option      "DPI" "108 x 108"
+    # Option      "DPI" "144 x 144"
     # Modeline    "1280x720_60.00" 74.50 1280 1344 1472 1664 720 723 728 748 -hsync +vsync
     # Option      "PreferredMode" "1280x720_60.00"
     # Option      "Rotate" "Right"
@@ -20,14 +20,14 @@ EndSection
 
 Section "Monitor"
     Identifier  "VGA-0"
-    Option      "RightOf" "LVDS"
+    Option      "LeftOf" "LVDS"
     Modeline    "1440x900_60.00"  106.50  1440 1528 1672 1904  900 903 909 934 -hsync +vsync
     Option      "PreferredMode" "1440x900_60.00"
     # Modeline    "1920x1080_60.00" 173.00 1920 2048 2248 2576 1080 1083 1088 1120 -hsync +vsync
     # Option      "PreferredMode" "1920x1080_60.00"
     # Option      "Rotate" "Right"
-    Option      "Position" "1372 0"
-    Option      "DPI" "108 x 108"
+    # Option      "Position" "1372 0"
+    # Option      "DPI" "108 x 108"
 EndSection
 
 Section "InputClass"
